<resources>
    <string name="app_name">NFC Attendance</string>
    <string name="string_bottom_sheet_behavior">string_bottom_sheet_behavior</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <string name="sqlDateTimeFormat" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addentity">Add Entity</string>

    <!-- Dates Predefined-->
    <string name="dateToday">Today</string>
    <string name="dateYesterday">Yesterday</string>
    <!-- -->

    <!-- intentExtra-->
    <string name="intentExtraNfcId">intentExtraNfcId</string>
    <string name="intentExtraSearchQuery">intentExtraSearchQuery</string>
    <!-- -->

    <!-- entityObject-->
    <string name="entityname">Name</string>
    <string name="entityaddress">Address</string>
    <string name="entityphoneno">Phone No</string>
    <string name="entityclass">Class</string>
    <string name="entitynfcid">NFC Id</string>
    <string name="entityroll">Roll No</string>
    <!-- -->

    <!-- Bundle Keys-->
    <string name="bundleSelctn">selctn</string>
    <!-- -->

    <!-- Dialog Text-->
    <string name="dialogWarning">Warning</string>
    <string name="dialogConfirmText">End Trip</string>
    <!-- -->

    <!-- Navigation Menu Strings -->
    <string name="navigationPresentList">Present List</string>
    <string name="navigationAllEntities">All Entities</string>
    <string name="navigationHistory">History</string>
    <string name="navigationsettings">Settings</string>
    <string name="navigationAdmin">Admin Access</string>
    <!-- -->

    <!-- PrefrencesActivity String-->
    <string name="temp">Temporary</string>
    <string name="tempkey">tempkey</string>
    <!-- -->

    <!-- Title String-->
    <string name="titleAllEntities">All Students</string>
    <string name="titleHistory">History</string>
    <string name="titleSettings">Settings</string>
    <string name="titleAdmin">Admin</string>
    <!-- -->

    <!-- Menu String-->
    <string name="menuScan">Scan</string>
    <string name="menuFinish">End Trip</string>
    <!-- -->

    <!-- Url-->
    <string name="urlServer">http://ec2-35-154-208-1.ap-south-1.compute.amazonaws.com/</string>
    <string name="urlAllEntity">queryNFCAll.php</string>
    <string name="urlSingleEntity">queryNFCSingle.php</string>
    <string name="urlScheduleAll">queryNFCschdeuleAll.php</string>
    <string name="urlScheduleNfc">queryNFCschdeuleNfc.php</string>
    <string name="urlScheduleDate">queryNFCschdeuleDate.php</string>
    <string name="urlInsertSchedule">insertNfcSchedule.php</string>
    <string name="urlBucketHost">https://s3-ap-northeast-1.amazonaws.com/</string>
    <string name="urlBucketName">nfcattensnimages</string>
    <string name="urlInsertNew">insertNFCnew.php</string>
    <string name="urlUpdateEntity">nfcUpdate.php</string>
    <string name="urlNfcDelete">nfcDelete.php</string>
    <!-- -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- -->

</resources>
